syntax = "proto3";

package slack.proto.kaldb;

option java_package = "com.slack.kaldb.proto.spanschemaconfig";

message SpanSchemaCheckerConfig {
  repeated Rule rules = 1;
}

message Rule {
  repeated TagRule tagRules = 1;
  repeated ServiceNameRegEx serviceNameRegExes = 2;
}

// If a span matches service name and name fields, the fields in ContainsTagKeys should exist.
message TagRule {
  optional string service_name = 1;
  optional string name = 2;
  repeated string mandatory_tag_keys = 3;
}

// NamesMatchPattern: Service name and name should match a reg-ex pattern.
message ServiceNameRegEx {
  optional string service_name_regex = 1;
  optional string name_regex = 2;
}